--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Hierarchical Time Series"
+author: "Owen Chaffard"
+description: "Some short description of your blog can go here." 
 
-# Email / Social media user names used by the minima theme:
-# All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "owenchaff@gmail.com"
+# twitter_username: "-"
+github_username: "ochaff"
+linkedin_username: "owen-chaffard"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
