--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Hierarchical Time Series"
+title: "Digital finance and time series"
 author: "Owen Chaffard"
-description: "Some short description of your blog can go here." 
+description: "A blog about my PhD research" 
 
 email: "owenchaff@gmail.com"
 # twitter_username: "-"
